--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@ h1, h2, h3, .card-body>.card-title {
   font-family: "Lobster", cursive;
 }
 
-
 .card-title {
   font-weight: 500; 
   font-size: 1.25rem;
@@ -45,4 +44,24 @@ h2 {
 
 .navbar-dark {
   background-color: #901CAD;
+}
+
+.page-enter {
+  opacity: 0;
+  transform: translateX(-100%);
+}
+
+.page-enter-active {
+  opacity: 1;
+  transform: translateX(0%);
+  transition: 300ms ease-out;
+}
+
+.page-exit {
+  opacity: 1;
+}
+
+.page-exit-active {
+  opacity: 0;
+  transition: 300ms ease-in;
 }
